base/ghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: ghost
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: ghost:5-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: uploads
              mountPath: /var/lib/ghost/content
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: ghost-uploads
