base/ghost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: ghost
  labels:
    app: webserver
spec:
  selector:
    app: webserver
  ports:
    - name: http
      port: 2368
      targetPort: 2368
  type: ClusterIP
