base/ghost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver
  namespace: ghost
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - zbmowrey.com
      secretName: domain-zbm001-cert
  rules:
    - host: zbmowrey.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver
                port:
                  number: 2368
